# Image-Processing-App---cpp

./: .gitignore  CMakeLists.txt  EXPLANATION.md  HOW_TO_USE.md  Makefile  gui.py
.claude/: launch.json  settings.local.json
include/builder/: TransformationBuilder.h
include/command/: Command.h
include/controller/: ImageController.h
include/factory/: FilterFactory.h
include/model/: ImageModel.h  Pixel.h
include/operations/: AllOperations.h  ImageOperation.h
include/view/: CLIView.h
src/: main.cpp
src/builder/: stub.cpp
src/command/: stub.cpp
src/controller/: stub.cpp
src/factory/: stub.cpp
src/model/: ImageModel.cpp
src/operations/: stub.cpp
src/view/: stub.cpp
tests/: model_tests.cpp  operations_tests.cpp  pattern_tests.cpp
